resolve overflow err, add in ucf open img - needs fix

--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -875,6 +875,16 @@ h3 {
 	text-align: left;
 }
 
+// .get_started_content {
+// 	background: url(/img/social-ucf-open.png) no-repeat;
+// 	right: calc(50% - 50vw);
+// 	background-size: contain;
+// }
+
+.ucf_open_img {
+	width: 10px;
+}
+
 .get_started {
 	// text-align: center;
 	font-family: 'Lato', arial, serif;
