--- a/src/css/partials/_homepage_spotlight.scss
+++ b/src/css/partials/_homepage_spotlight.scss
@@ -131,7 +131,7 @@ store_main section {
 	// purely center aligned
 	left: calc(50% - 50vw);
 	text-align: center;
-	width: 100vw;
+	// width: 100vw;
 	background-size: contain;
 	display: flex;
 	justify-content: center;
